syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message AccountSummary {
    optional int32 reqId = 1;
	optional string account = 2;
	optional string tag = 3;
	optional string value = 4;
	optional string currency = 5;
}
