syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message AccountUpdateMulti {
    optional int32 reqId = 1;
    optional string account = 2;
    optional string modelCode = 3;
    optional string key = 4;
    optional string value = 5;
    optional string currency = 6;
}
