syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message CancelAccountUpdatesMulti {
    optional int32 reqId = 1;
}
