syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message CancelPositionsMulti {
    optional int32 reqId = 1;
}
