/* Copyright (C) 2025 Interactive Brokers LLC. All rights reserved. This code is subject to the terms
 * and conditions of the IB API Non-Commercial License or the IB API Commercial License, as applicable. */

syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";
message CancelScannerSubscription {
    optional int32 reqId = 1;
}
