syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message CancelWshMetaData {
    optional int32 reqId = 1;
}
