syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message CommissionAndFeesReport {
    optional string execId = 1;
    optional double commissionAndFees = 2;
    optional string currency = 3;
    optional double realizedPNL = 4;
    optional double bondYield = 5;
    optional string yieldRedemptionDate = 6;
}
