syntax = "proto3";

package protobuf;

import "Contract.proto";
import "Order.proto";
import "OrderState.proto";

option go_package = ".;protobuf";

message CompletedOrder {
    optional Contract contract = 1;
    optional Order order = 2;
    optional OrderState orderState = 3;
}