syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message CurrentTime {
    optional int64 currentTime = 1;
}
