syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message CurrentTimeInMillis {
    optional int64 currentTimeInMillis = 1;
}
