syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message DisplayGroupUpdated {
    optional int32 reqId = 1;
    optional string contractInfo = 2;
}
