syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message HeadTimestamp {
    optional int32 reqId = 1;
	optional string headTimestamp = 2;
}
