syntax = "proto3";

package protobuf;

import "HistoricalDataBar.proto";

option go_package = ".;protobuf";

message HistoricalData {
    optional int32 reqId = 1;
	repeated HistoricalDataBar historicalDataBars = 2;
}
