syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message HistoricalNewsEnd {
    optional int32 reqId = 1;
    optional bool hasMore = 2;
}
