syntax = "proto3";

package protobuf;

import "HistoricalTickLast.proto";

option go_package = ".;protobuf";

message HistoricalTicksLast {
    optional int32 reqId = 1;
	repeated HistoricalTickLast historicalTicksLast = 2;
	optional bool isDone = 3;
}
