syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message MarketDataTypeRequest {
    optional int32 marketDataType = 1;
}
