syntax = "proto3";

package protobuf;

import "MarketDepthData.proto";

option go_package = ".;protobuf";

message MarketDepth {
    optional int32 reqId = 1;
    optional MarketDepthData marketDepthData = 2;
}
