syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message NextValidId {
    optional int32 orderId = 1;
}
