syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message ReplaceFAEnd {
    optional int32 reqId = 1;
    optional string text = 2;
}
