syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message ScannerParameters {
    optional string xml = 1;
}
