syntax = "proto3";

package protobuf;

import "SmartComponent.proto";

option go_package = ".;protobuf";

message SmartComponents {
    optional int32 reqId = 1;
	repeated SmartComponent smartComponents = 2;
}
