syntax = "proto3";

package protobuf;

import "SoftDollarTier.proto";

option go_package = ".;protobuf";

message SoftDollarTiers {
    optional int32 reqId = 1;
	repeated SoftDollarTier softDollarTiers = 2;
}
