syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";


message TickNews {
    optional int32 reqId = 1;
    optional int64 timestamp = 2;
    optional string providerCode = 3;
    optional string articleId = 4;
    optional string headline = 5;
    optional string extraData = 6;
}
