syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message TickOptionComputation {
    optional int32 reqId = 1;
    optional int32 tickType = 2;
    optional int32 tickAttrib = 3;
    optional double impliedVol = 4;
    optional double delta = 5;
    optional double optPrice = 6;
    optional double pvDividend = 7;
    optional double gamma = 8;
    optional double vega = 9;
    optional double theta = 10;
    optional double undPrice = 11;
}
