syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message TickPrice {
    optional int32 reqId = 1;
    optional int32 tickType = 2;
    optional double price = 3;
    optional string size = 4;
    optional int32 attrMask = 5;
}
