syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message VerifyMessageApi {
	optional string apiData = 1;
}
