syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message VerifyRequest {
	optional string apiName = 1;
	optional string apiVersion = 2;
}
